# painel-sistemas-controle

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: tests.yml
.streamlit/: config.toml
docs/: validacao-nise.md
examples/: reference_systems.json
src/control_dashboard/: __init__.py  app.py
src/control_dashboard/analysis/: __init__.py  frequency.py  nyquist.py  pole_zero.py  root_locus.py  systems.py  time_response.py
src/control_dashboard/application/: __init__.py  analysis_service.py
src/control_dashboard/domain/: __init__.py  diagnostics.py  models.py  validation.py
src/control_dashboard/reporting/: __init__.py  pdf_report.py
src/control_dashboard/ui/: __init__.py  components.py  layout.py
src/control_dashboard/visualization/: __init__.py  plotly_charts.py  static_charts.py  theme.py
tests/integration/: test_export_and_charts.py
tests/reference/: nise_6e_cases.json  test_nise_6e.py
tests/ui/: test_streamlit_app.py
tests/unit/: test_analysis.py  test_validation.py
