[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "control-dashboard"
version = "0.1.0"
description = "Painel local para análise de sistemas de controle SISO contínuos"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "control==0.10.2",
  "matplotlib>=3.11,<4",
  "numpy>=2.4,<3",
  "plotly>=6.9,<7",
  "reportlab>=5,<6",
  "scipy>=1.18,<2",
  "streamlit>=1.59,<1.60",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.1,<10",
  "ruff>=0.15,<0.16",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

